Moved hydroinformatics files to this project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /.Rproj.user/
 /.RData
 r4h2o-cheat-sheet.odp
+/case-studies/consumer-involvement.docx
+/case-studies-old/
+/data/prettyboy.*
+/routledge/
+/youtube/
