--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ r4h2o-cheat-sheet.odp
 /data/prettyboy.*
 /routledge/
 /youtube/
+/case-studies/google-maps.api
+.httr-oauth
+/case-studies/twitter-api.R
+/data/PrettyBoy1998.dat
