Updated data folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,10 @@
 /.RData
 r4h2o-cheat-sheet.odp
 /case-studies/consumer-involvement.docx
-/case-studies-old/
-/data/prettyboy.*
 /routledge/
 /youtube/
 /case-studies/google-maps.api
 .httr-oauth
 /case-studies/twitter-api.R
 /data/PrettyBoy1998.dat
+.gitignore
