Updated bubble chart script

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 .Ruserdata
 /case-studies/google-maps.api
 *.html
+/course/prevos-2023-data-science-for-water-utilities-course-day-1.pdf
+/data/PrettyBoy1998.dat
+/data/google-maps.api
